force-app/main/default/objects/nFORMS__Form_Template__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Template</label>
    <referenceTo>nFORMS__Form_Template__c</referenceTo>
    <relationshipLabel>Form Templates</relationshipLabel>
    <relationshipName>Form_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>