force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Closing_Checklist__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Closing_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this required field to link a form template to a Closing Checklist in order to create placeholders with predefined values.</description>
    <inlineHelpText>Links a form template to a Closing Checklist in order to create placeholders with predefined values.</inlineHelpText>
    <label>Closing Checklist</label>
    <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
    <relationshipLabel>Form Templates</relationshipLabel>
    <relationshipName>Form_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>