force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Enable_FLS__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Enable_FLS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When this checkbox is enabled and a user generates a form from this template, the fields that the user does not have read access to are not displayed on the form. For HTML output forms, FLS is always respected, regardless of the value in this checkbox.</description>
    <label>Enable FLS</label>
    <type>Checkbox</type>
</CustomField>