force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Filter__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Filter__c</fullName>
    <description>This field is manually populated. It is optional. It is used to specify criteria that must be met by a record for the form template to be available for Form Generation.</description>
    <inlineHelpText>The form template will only be available to objects that meet this filter criteria.</inlineHelpText>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>