force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Form_Purpose__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Form_Purpose__c</fullName>
    <description>Users populate this optional picklist field with the purpose of the form generation template. By default, it is General.</description>
    <label>Form Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>