force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. It allows the user to select whether a Form Template is available to users. When true, the form template is available, when false, it is not available. By default, it is false.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>