force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Page_Dimension_Unit__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Page_Dimension_Unit__c</fullName>
    <description>Admins populate this optional picklist field to define the unit of measurement for the page width. By default, the value is inches.</description>
    <label>Page Dimension Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centimeters</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
                <default>true</default>
                <label>Inches</label>
            </value>
            <value>
                <fullName>Millimeters</fullName>
            </value>
            <value>
                <fullName>Pixels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>