force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Save_To_Docman__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Save_To_Docman__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. It allows the user to specify whether the Form generated should be saved to document manager. When true, it is saved to document manager, when false it is not. By default, it is false.</description>
    <label>Save To Docman</label>
    <type>Checkbox</type>
</CustomField>