force-app/main/default/objects/nFORMS__Form_Template__c/fields/nFORMS__Template_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORMS__Template_Input_Type__c</fullName>
    <description>The administrators populate this picklist field to define the type of the input file used to generate a document.  By default, it is blank.</description>
    <inlineHelpText>Select Word or HTML format as a document template input.</inlineHelpText>
    <label>Template Input Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Word</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>