force-app/main/default/objects/nFORMS__Form_Template__c/listViews/nFORMS__All.listView-meta.xml
<ListView>
    <fullName>nFORMS__All</fullName>
    <columns>NAME</columns>
    <columns>nFORMS__lookupKey__c</columns>
    <columns>nFORMS__Template_Input_Type__c</columns>
    <columns>nFORMS__Output_Type__c</columns>
    <columns>nFORMS__Document_Output_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>